objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Action_Items__c</fullName>
        <label>Action Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Value__c</fullName>
        <formula>IF( 
And(
ISPICKVAL (Milestone__c,"M003 - Demo/Value Presentation"),
ISPICKVAL ( Interaction_Type__c,"Initial Milestone")),1,0)</formula>
        <label>Activity Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Lead_Volume_Per_Month__c</fullName>
        <inlineHelpText>Total number of unique contacts per month</inlineHelpText>
        <label>Actual Lead Volume Per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_New_Customers_Per_Month__c</fullName>
        <label>Actual New Customers Per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_PPL__c</fullName>
        <inlineHelpText>Monthly PPL data pulled from the FMA dashboard</inlineHelpText>
        <label>Actual PPL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_ROI__c</fullName>
        <label>Actual ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value_Opp__c</fullName>
        <label>Annual Contract Value (Opp)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Manager__c</fullName>
        <formula>Owner:User.Manager.Full_Name__c</formula>
        <label>Assigned To Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Assigned To Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottoms_Up_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bottoms Up Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Customer_Satisfaction_Score__c</fullName>
        <inlineHelpText>1 being the lowest 10 being the highest, rating should reflect how satisfied you think the customer is with this specific call/meeting</inlineHelpText>
        <label>CS - Customer Satisfaction Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date_Time__c</fullName>
        <label>Close Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to designate if a contract was sent to client.  Used by YBN IL Sales.</description>
        <label>Contract Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corp_Acct_ID_in_YL__c</fullName>
        <label>Corp Acct ID in YL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_by_new_hire_class__c</fullName>
        <formula>text(CreatedBy.Training_Class__c)</formula>
        <label>Created By New Hire Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Rated_Satisfaction_Score__c</fullName>
        <inlineHelpText>1 being the lowest 10 being the highest, rating should reflect customer's response to how satisfied they are with this specific meeting/call</inlineHelpText>
        <label>Customer Rated Satisfaction Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Held__c</fullName>
        <label>Demo Held</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Set__c</fullName>
        <label>Demo Set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eliminate_from_Intro_Call_compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eliminate from Intro Call compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_ID__c</fullName>
        <label>Location ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modified_Milestone__c</fullName>
        <label>Milestone #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Client_Status__c</fullName>
        <formula>TEXT(Account.National_Account_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Client Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Posted_By__c</fullName>
        <inlineHelpText>for Marketing/PR</inlineHelpText>
        <label>Posted By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Cold_Call_Prep_Notes__c</fullName>
        <label>Pre Cold Call Prep Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_ID__c</fullName>
        <formula>LEFT(WhatId, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related to ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_Object__c</fullName>
        <formula>IF(
BEGINS(WhatId, "001"), "Account","")</formula>
        <label>Related to Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <label>Relationship Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Customer_Satisfaction_Score__c</fullName>
        <inlineHelpText>1 being the lowest 10 being the highest, rating should reflect how satisfied you think the customer is with this specific call/meeting</inlineHelpText>
        <label>Sales - Customer Satisfaction Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Email_Alert_to_SD_AD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this button to send an email notification to the SD or AD on the account with a summary of the call notes</inlineHelpText>
        <label>Send Email Alert to SD/AD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary_of_Discussion_Items__c</fullName>
        <inlineHelpText>Notes on all items discussed during the activity</inlineHelpText>
        <label>Summary of Discussion Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_Issues_Client_Concerns__c</fullName>
        <label>Issues &amp; Client Concerns Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_To_Complete_Activity_Minutes__c</fullName>
        <label>Time To Complete Activity (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Win_Back_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Win Back Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Attempt_By_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>1st Attempt By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1st_Attempt_Date__c</fullName>
        <label>1st Attempt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Attempt_Date__c</fullName>
        <label>2nd Attempt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X5_in_60__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5 in 60</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>created_by_profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>created by profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>link_to_comment__c</fullName>
        <inlineHelpText>for marketing/PR use</inlineHelpText>
        <label>link to comment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the local time for the related Lead or Contact.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset__c), 
"Unknown", 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 6, 2 ) &amp; "/" &amp; 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 9, 2 ) &amp; "/" &amp; 
LEFT( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 4 ) &amp; " " &amp; 
TEXT( 
IF( 
OR( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) = 0, 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) = 12 
), 
12, 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) 
- 
IF( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) &lt; 12, 
0, 
12 
) 
) 
) 
&amp;":"&amp; 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 15, 2 ) 
&amp;" "&amp; 
IF( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) &lt; 12, 
"AM", 
"PM" 
) 
&amp; " " &amp; 
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,"") 
)</formula>
        <inlineHelpText>Shows the local time for the related Lead or Contact.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Timezone abbreviation (PST, EST,etc..)</description>
        <inlineHelpText>Timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset__c</fullName>
        <description>Shows the UTC timezone offset of the Lead / Contact associated with the task.</description>
        <inlineHelpText>Shows the UTC timezone offset of the Lead / Contact associated with the task.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Start_Time__c</fullName>
        <description>Time field for Event Start Time field Uses Central Time Zone - 5 hour Offset (Dalylight Savings Time)</description>
        <formula>TIMEVALUE(ActivityDateTime) - 18000000
/*
1800000  5 hour offset Daylight Saving Central Time Zone
21600000 6 hour offset Standard Time for Central TimeZone
*/</formula>
        <inlineHelpText>Uses Central Time Zone - 5 hour Offset (Dalylight Savings Time)</inlineHelpText>
        <label>Activity Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Related_to_Oppty__c</fullName>
        <description>Used in WBN Upsell Process: Shows Opportunities and Accounts.</description>
        <formula>OR(
LEFT( WhatId ,3)= '006', /*Opportunity */
LEFT( WhatId ,3)= '001' /* Account */
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related to Oppty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Type__c</fullName>
        <label>AM Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discussion</fullName>
                </value>
                <value>
                    <fullName>Problem/Error</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Lead_Source__c</fullName>
        <label>Activity Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Inbound Call - Holiday Promotion</fullName>
                </value>
                <value>
                    <fullName>Inbound Email - Holiday Promotion</fullName>
                </value>
                <value>
                    <fullName>Inbound Form Submission - Holiday Promotion</fullName>
                </value>
                <value>
                    <fullName>Outbound Call - Holiday Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Opportunity Milestone - Transaction</fullName>
                </value>
                <value>
                    <fullName>Opportunity Milestone - Implementation</fullName>
                </value>
                <value>
                    <fullName>Lifecycle Milestone</fullName>
                </value>
                <value>
                    <fullName>Sales Activity</fullName>
                </value>
                <value>
                    <fullName>Client Services Activity - Individual Location</fullName>
                </value>
                <value>
                    <fullName>Network Communications Portal Notification</fullName>
                </value>
                <value>
                    <fullName>Account Transition Milestone</fullName>
                </value>
                <value>
                    <fullName>Client Services Activity - Corporate</fullName>
                </value>
                <value>
                    <fullName>Customer Call - Escalation</fullName>
                </value>
                <value>
                    <fullName>Customer Call - Performance Review</fullName>
                </value>
                <value>
                    <fullName>Customer Call - Exec to Exec</fullName>
                </value>
                <value>
                    <fullName>Customer In Person Meeting</fullName>
                </value>
                <value>
                    <fullName>Internal Meeting</fullName>
                </value>
                <value>
                    <fullName>Account Support</fullName>
                </value>
                <value>
                    <fullName>External Customer Activity</fullName>
                </value>
                <value>
                    <fullName>Internal YBN Activities</fullName>
                </value>
                <value>
                    <fullName>Service Level Touch Points</fullName>
                </value>
                <value>
                    <fullName>Presale</fullName>
                </value>
                <value>
                    <fullName>Bulk Onboarding</fullName>
                </value>
                <value>
                    <fullName>Internal YBN Sales Activities</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Multi-Account Support</fullName>
                </value>
                <value>
                    <fullName>Internal Initiatives</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_to_Cold_Call_Blitz__c</fullName>
        <label>Add to Cold Call Blitz?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Save for Future Blitz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>SDR</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Project_Details__c</fullName>
        <inlineHelpText>For client services only, details on the client project they are logging minutes for</inlineHelpText>
        <label>Project Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASW Business Updates</fullName>
                </value>
                <value>
                    <fullName>Website Updates</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Call Quality Audit</fullName>
                </value>
                <value>
                    <fullName>Website Audit</fullName>
                </value>
                <value>
                    <fullName>Creating Training Materials</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Business Updates</fullName>
                </value>
                <value>
                    <fullName>Coupon updates</fullName>
                </value>
                <value>
                    <fullName>Audits</fullName>
                </value>
                <value>
                    <fullName>Call rating</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>In Person Meeting</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Showed_Up__c</fullName>
        <label>Demo - Show/No Show</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_d_Products__c</fullName>
        <label>Demo'd Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>Foundations</fullName>
                </value>
                <value>
                    <fullName>Reviews</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Touch_Connected_w_target_and__c</fullName>
        <label>Initial Touch: Connected w/ target and</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed basic info - no edits needed</fullName>
                </value>
                <value>
                    <fullName>Confirmed basic info - edits needed</fullName>
                </value>
                <value>
                    <fullName>Positioned YBN &amp; our product</fullName>
                </value>
                <value>
                    <fullName>Covered relationship specific info</fullName>
                </value>
                <value>
                    <fullName>Dashboard walkthrough</fullName>
                </value>
                <value>
                    <fullName>Demo'd products - Sales</fullName>
                </value>
                <value>
                    <fullName>Upsold additional products - Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Milestone</fullName>
                </value>
                <value>
                    <fullName>Repeated Milestone</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Prep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Resolution_Detail__c</fullName>
        <label>Issue Resolution Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Questions</fullName>
                </value>
                <value>
                    <fullName>Business Info Updates</fullName>
                </value>
                <value>
                    <fullName>Call Tracking Updates</fullName>
                </value>
                <value>
                    <fullName>Dashboard Walkthrough</fullName>
                </value>
                <value>
                    <fullName>Listing Issues</fullName>
                </value>
                <value>
                    <fullName>Login Issues</fullName>
                </value>
                <value>
                    <fullName>Performance Concerns</fullName>
                </value>
                <value>
                    <fullName>Pin Collection</fullName>
                </value>
                <value>
                    <fullName>Promotion Updates</fullName>
                </value>
                <value>
                    <fullName>Sales Expectations</fullName>
                </value>
                <value>
                    <fullName>Service Concerns</fullName>
                </value>
                <value>
                    <fullName>Website Updates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issues_or_Concerns_Raised__c</fullName>
        <label>Issues or Concerns Raised</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Consultant__c</fullName>
        <description>Should only be marked as yes when activity creator is also the lead consultant adn they're doing lead consultant specific work, NOT just servicing owned accounts within that lead relationship.</description>
        <label>Lead Consultant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Inbound_Lead_Source__c</fullName>
        <label>Marketing Campaign Inbound Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web Lead</fullName>
                </value>
                <value>
                    <fullName>Incoming Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Name__c</fullName>
        <label>Marketing Campaign Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email $200 Promo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Outcome__c</fullName>
        <label>Marketing Campaign Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Demo Set</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>Internal Meeting Attendees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Director</fullName>
                </value>
                <value>
                    <fullName>Sales Director</fullName>
                </value>
                <value>
                    <fullName>Sales Executive</fullName>
                </value>
                <value>
                    <fullName>Implementation Specialist</fullName>
                </value>
                <value>
                    <fullName>Lead Consultant</fullName>
                </value>
                <value>
                    <fullName>Lead Analyst</fullName>
                </value>
                <value>
                    <fullName>CS Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Product Manager</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>SDR</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Result__c</fullName>
        <label>Phone Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NVM</fullName>
                </value>
                <value>
                    <fullName>LVM</fullName>
                </value>
                <value>
                    <fullName>Connected with Target</fullName>
                </value>
                <value>
                    <fullName>Connected with Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>Set Demo</fullName>
                </value>
                <value>
                    <fullName>On the Fly Demo</fullName>
                </value>
                <value>
                    <fullName>Conducted Demo</fullName>
                </value>
                <value>
                    <fullName>Demo did not hold</fullName>
                </value>
                <value>
                    <fullName>Future Event</fullName>
                </value>
                <value>
                    <fullName>Bad number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Outreach_Outcome__c</fullName>
        <label>Portal Outreach Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Successfully Signed Customer Up</fullName>
                </value>
                <value>
                    <fullName>Customer Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                    <default>true</default>
                    <label>Minor</label>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proactive_vs_Reactive__c</fullName>
        <label>Proactive or Reactive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Reactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_upsold__c</fullName>
        <label>Products upsold</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>Foundations</fullName>
                </value>
                <value>
                    <fullName>Reviews</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Case activity</fullName>
                </value>
                <value>
                    <fullName>Churn</fullName>
                </value>
                <value>
                    <fullName>General/Common Questions</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SA_demo_type__c</fullName>
        <label>SA demo type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warm Transfer</fullName>
                </value>
                <value>
                    <fullName>Scheduled Appt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>